[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gvisor"
version = "0.1.0"
description = "Python bindings for gVisor."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System Kernels",
]
dependencies = []

[project.urls]
Homepage = "https://gvisor.dev"
Bug-Tracker = "https://github.com/google/gvisor/issues"
Repository = "https://github.com/google/gvisor"

[tool.setuptools]
packages = ["gvisor"]
